2008-02-07  Inge Wallin  <inge@lysator.liu.se>

	* src/lib/MarbleWidget.cpp: Make the legend work again by making
	all the setters and getters call the equivalent function in
	MarbleMap. 

2008-02-07  Torsten Rahn  <rahn@kde.org>

    * Messages.sh:
    - Fix for untranslatable string by Burkhard Lück

2008-02-05  Inge Wallin  <inge@lysator.liu.se>

	* src/lib/MarbleWidget.cpp: Continue adapting MarbleWidget to the
	new MarbleMap.

	Fix the pan bug that was left from previous commits so that tackat
	can work again.
	* src/lib/MarbleWidget.cpp (rotateTo): Delegate to MarbleMap
	* src/lib/MarbleMap.cpp: cleaning
	* src/lib/MarbleWidgetInputHandler.cpp: cleaning

2008-02-04  Inge Wallin  <inge@lysator.liu.se>

	Hopefully fix the crash in goHome in the qt only version.
	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate): Disable
	m_homePoint and m_homeZoom.
	(home, setHome*2, goHome): Immediately call same in MarbleMap.
	

	* src/lib/MarbleMap.cpp (construct): Don't connect to
	enableInput() since that slot is only relevant to the widget.

	More fixes in the MarbleWidget / MarbleMap split.
	* src/lib/MarbleMap.h: Make MarbleWidget a friend of MarbleMap
	* src/lib/MarbleWidget.cpp: More fixes for MarbleWidget to use
	MarbleMap.
	* src/lib/MarbleWidgetInputHandler.cpp: indent better

2008-02-03  Inge Wallin  <inge@lysator.liu.se>

	Start to use the MarbleMap in MarbleWidget.
	NOTE: THIS DOESN'T FULLY WORK!
	      I have to switch computer now, and I'm really sorry about
	      this.  Navigation with the keyboard works, but not yet with
	      the mouse, as the integration is not yet 100%.	
	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate): Contain a
	MarbleMap.
	(class MarbleWidget): Use the MarbleMap whereever possible.
	* src/lib/MarbleMap.h (doPaint): now a public function.
	* src/lib/MarbleMap.cpp: some updates for use in MarbleWidget.
	* src/lib/ViewParams.cpp: Cleaning
	
2008-02-02  Inge Wallin  <inge@lysator.liu.se>
