@@ -9,6 +9,7 @@
 // Copyright 2007      Inge Wallin  <ingwa@kde.org>"
 //
 
+
 #include "ClipPainter.h"
 
 #include <cmath>
@@ -19,20 +20,20 @@
 // #define MARBLE_DEBUG
 
 ClipPainter::ClipPainter(QPaintDevice * pd, bool clip)
-    : QPainter(pd)
+    : QPainter( pd )
 {
-    m_imgwidth    = pd -> width(); 
-    m_imgheight   = pd -> height();
-    m_currentxpos = 0;
-    m_currentypos = 0;
+    m_imgWidth       = pd->width(); 
+    m_imgHeight      = pd->height();
+    m_currentXSector = 0;
+    m_currentYSector = 0;
 
     m_left   = -1.0; 
-    m_right  = (double)(m_imgwidth);
+    m_right  = (double)(m_imgWidth);
     m_top    = -1.0; 
-    m_bottom = (double)(m_imgheight);	
+    m_bottom = (double)(m_imgHeight);	
 
     // m_debugNodeCount = 0;
-    m_clip = clip;
+    m_doClip = clip;
     // penblue.setColor(QColor( 0, 0, 255, 255));
     // pengreen.setColor(QColor( 0, 255, 0, 255));
 }
@@ -40,64 +41,67 @@ ClipPainter::ClipPainter(QPaintDevice * pd, bool clip)
 
 void ClipPainter::setClipping(bool enable)
 {
-    m_clip = enable;
+    m_doClip = enable;
 }
 
 
-bool ClipPainter::hasClipping() const {
-    return m_clip;
-}
-
-
-void ClipPainter::drawPolygon ( const QPolygonF & pa, Qt::FillRule fillRule )
+bool ClipPainter::isClipping() const
 {
+    return m_doClip;
+}
 
-    if ( m_clip == true ) {	
-        drawPolyobject( pa );
-        if (m_clipped.size() > 2) {
-            // qDebug() << "Size: " << m_clipped.size();
-            QPainter::drawPolygon ( m_clipped, fillRule );
+
+void ClipPainter::drawPolygon ( const QPolygonF & polygon,
+                                Qt::FillRule fillRule )
+{
+    if ( m_doClip ) {	
+        clipPolyObject( polygon );
+        if ( m_clippedObject.size() > 2 ) {
+            // qDebug() << "Size: " << m_clippedObject.size();
+            QPainter::drawPolygon ( m_clippedObject, fillRule );
             // qDebug() << "done";
         }
     }
     else
-        QPainter::drawPolygon ( pa, fillRule );
+        QPainter::drawPolygon ( polygon, fillRule );
 }
 
 
-void ClipPainter::drawPolyline( const QPolygonF & pa )
+void ClipPainter::drawPolyline( const QPolygonF & polygon )
 {
-    if ( m_clip == true ) {	
-        drawPolyobject( pa );
-        if (m_clipped.size() > 1) {
-            // qDebug() << "Size: " << m_clipped.size();
-            QPainter::drawPolyline ( m_clipped );
+    if ( m_doClip ) {	
+        clipPolyObject( polygon );
+        if ( m_clippedObject.size() > 1 ) {
+            // qDebug() << "Size: " << m_clippedObject.size();
+            QPainter::drawPolyline ( m_clippedObject );
             // qDebug() << "done";
         }
     }
     else
-        QPainter::drawPolyline( pa );
+        QPainter::drawPolyline( polygon );
 }
 
 
-void ClipPainter::drawPolyobject ( const QPolygonF & pa )
+void ClipPainter::clipPolyObject ( const QPolygonF & polygon )
 {
 
-    /* If we think of the image borders as (infinetly long) parallels
-     * then the on- and offscreen are divided into 9 sections. Each of
-     * these sections is identified by a unique keynumber
-     * (currentpos):
-     *
-     *	012
-     *	345 <- keynumber "4" represents the onscreen section
-     *	678
-     */
+    // If we think of the image borders as (infinitly long) parallel
+    // lines then the plane is divided into 9 sectors.  Each of these
+    // sections is identified by a unique keynumber (currentSector):
+    //
+    //	0 | 1 | 2
+    //  --+---+--
+    //	3 | 4 | 5 <- sector number "4" represents the onscreen sector
+    //  --+---+--
+    //	6 | 7 | 8
+    //
+
     //	qDebug() << "ClipPainter enabled." ;
-    m_clipped.clear();
+    m_clippedObject.clear();
 
     QVector<QPointF>::const_iterator        itPoint;
-    const QVector<QPointF>::const_iterator  itStartPoint = pa.begin();
-    const QVector<QPointF>::const_iterator  itEndPoint   = pa.end();
+    const QVector<QPointF>::const_iterator  itStartPoint = polygon.begin();
+    const QVector<QPointF>::const_iterator  itEndPoint   = polygon.end();
 
     for ( itPoint = itStartPoint; itPoint != itEndPoint; ++itPoint ) {
 
@@ -105,40 +109,40 @@ void ClipPainter::drawPolyobject ( const QPolygonF & pa )
         // qDebug() << "m_currentPoint.x()" << m_currentPoint.x() << "m_currentPOint.y()" << m_currentPoint.y();
 
         // Figure out the section of the current point.
-        m_currentxpos = 1;
+        m_currentXSector = 1;
         if ( m_currentPoint.x() < m_left )
-            m_currentxpos = 0;
-        if ( m_currentPoint.x() > m_right ) 
-            m_currentxpos = 2;
+            m_currentXSector = 0;
+        else if ( m_currentPoint.x() > m_right ) 
+            m_currentXSector = 2;
 							
-        m_currentypos = 3;
+        m_currentYSector = 3;
         if ( m_currentPoint.y() < m_top ) 
-            m_currentypos = 0;
-        if ( m_currentPoint.y() > m_bottom ) 
-            m_currentypos = 6;
+            m_currentYSector = 0;
+        else if ( m_currentPoint.y() > m_bottom ) 
+            m_currentYSector = 6;
 
-        m_currentpos = m_currentypos + m_currentxpos;
+        m_currentSector = m_currentYSector + m_currentXSector;
 
         // Initialize a few remaining variables.
         if ( itPoint == itStartPoint ) {
-            m_lastpos = m_currentpos;
+            m_lastSector = m_currentSector;
         }
 
-        // If the current point reaches a new section, take care of clipping.
-        if ( m_currentpos != m_lastpos ) {
-            if ( m_currentpos == 4 || m_lastpos == 4 ) {
+        // If the current point reaches a new sector, take care of clipping.
+        if ( m_currentSector != m_lastSector ) {
+            if ( m_currentSector == 4 || m_lastSector == 4 ) {
                 m_lastBorderPoint = borderPoint();
-                m_clipped << m_lastBorderPoint;
+                m_clippedObject << m_lastBorderPoint;
             }
             else
                 manageOffScreen();		
 
-            m_lastpos = m_currentpos;
+            m_lastSector = m_currentSector;
         }
 
         // If the current point is onscreen, just add it to our final polygon.
-        if ( m_currentpos == 4 ) {
-            m_clipped << m_currentPoint;
+        if ( m_currentSector == 4 ) {
+            m_clippedObject << m_currentPoint;
 #ifdef MARBLE_DEBUG
             ++m_debugNodeCount;
 #endif
@@ -163,140 +167,138 @@ void ClipPainter::manageOffScreen()
     // Calculating the slope
     double  divisor = m_currentPoint.x() - m_lastPoint.x();
     if ( fabs( divisor ) < 0.000001 )
+        // FIXME: Is this ok even if divisor < 0?
         divisor = 0.000001;
 
     double  m = ( m_currentPoint.y() - m_lastPoint.y() ) / divisor;
 
-    switch ( m_currentpos ) {
+    switch ( m_currentSector ) {
     case 0:
-        m_clipped << QPointF( m_left, m_top );
+        m_clippedObject << QPointF( m_left, m_top );
         break;
+
     case 1:
-        if ( m_lastpos == 3 ) { // case checked
+        if ( m_lastSector == 3 ) { // case checked
             xa = m_lastPoint.x() + ( m_top - m_lastPoint.y() ) / m;
             ya = m * ( m_left - m_lastPoint.x() ) + m_lastPoint.y();
             if ( xa < m_left && ya < m_top )
-                m_clipped << QPointF( m_left, m_top );
-            else {
-                if ( m_lastBorderPoint.x() == m_left )
-                    m_clipped << QPointF( m_left, ya ) << QPointF( xa, m_top );
-                else
-                    m_clipped << QPointF( xa, m_top ) << QPointF( m_left, ya );
-            }
+                m_clippedObject << QPointF( m_left, m_top );
+            else if ( m_lastBorderPoint.x() == m_left )
+                m_clippedObject << QPointF( m_left, ya )
+                                << QPointF( xa, m_top );
+            else
+                m_clippedObject << QPointF( xa, m_top )
+                                << QPointF( m_left, ya );
         }
-        if ( m_lastpos == 5 ) { // case checked
+        else if ( m_lastSector == 5 ) { // case checked
             xa = m_lastPoint.x() + ( m_top - m_lastPoint.y() ) / m;
             ya = m * ( m_right - m_lastPoint.x() ) + m_lastPoint.y();
             if ( xa > m_right && ya < m_top )
-                m_clipped << QPointF( m_right, m_top );
-            else {
-                if ( m_lastBorderPoint.x() == m_right )
-                    m_clipped << QPointF( m_right, ya )
-                              << QPointF( xa, m_top );
-                else
-                    m_clipped << QPointF( xa, m_top )
-                              << QPointF( m_right, ya );
-            }
+                m_clippedObject << QPointF( m_right, m_top );
+            else if ( m_lastBorderPoint.x() == m_right )
+                m_clippedObject << QPointF( m_right, ya )
+                                << QPointF( xa, m_top );
+            else
+                m_clippedObject << QPointF( xa, m_top )
+                                << QPointF( m_right, ya );
         }
         break;
+
     case 2:
-        m_clipped << QPointF( m_right, m_top );
+        m_clippedObject << QPointF( m_right, m_top );
         break;
+
     case 3:
-        if ( m_lastpos == 1 ) {
+        if ( m_lastSector == 1 ) {
             xa = m_lastPoint.x() + ( m_top - m_lastPoint.y() ) / m;
             ya = m * ( m_left - m_lastPoint.x() ) + m_lastPoint.y();
             if ( xa < m_left && ya < m_top )
-                m_clipped << QPointF( m_left, m_top );
-            else {
-                if ( m_lastBorderPoint.x() == m_left )
-                    m_clipped << QPointF( m_left, ya ) << QPointF( xa, m_top );
-                else
-                    m_clipped << QPointF( xa, m_top ) << QPointF( m_left, ya );
-            }
+                m_clippedObject << QPointF( m_left, m_top );
+            else if ( m_lastBorderPoint.x() == m_left )
+                m_clippedObject << QPointF( m_left, ya )
+                                << QPointF( xa, m_top );
+            else
+                m_clippedObject << QPointF( xa, m_top )
+                                << QPointF( m_left, ya );
         }
-        if ( m_lastpos == 7 ) {
+        else if ( m_lastSector == 7 ) {
             xa = m_lastPoint.x() + ( m_bottom - m_lastPoint.y() ) / m;
             ya = m * ( m_left - m_lastPoint.x() ) + m_lastPoint.y();
             if ( xa < m_left && ya > m_bottom )
-                m_clipped << QPointF( m_left, m_bottom );
+                m_clippedObject << QPointF( m_left, m_bottom );
             else {
                 if ( m_lastBorderPoint.x() == m_left )
-                    m_clipped << QPointF( m_left, ya ) 
+                    m_clippedObject << QPointF( m_left, ya ) 
                               << QPointF( xa, m_bottom );
                 else
-                    m_clipped << QPointF( xa, m_bottom ) 
+                    m_clippedObject << QPointF( xa, m_bottom ) 
                               << QPointF( m_left, ya );
             }
         }
         break;
 				
     case 5:
-        if ( m_lastpos == 1 ) { // case checked
+        if ( m_lastSector == 1 ) { // case checked
             xa = m_lastPoint.x() + ( m_top - m_lastPoint.y() ) / m;
             ya = m * ( m_right - m_lastPoint.x() ) + m_lastPoint.y();
             if ( xa > m_right && ya < m_top )
-                m_clipped << QPointF( m_right, m_top );
-            else {
-                if ( m_lastBorderPoint.x() == m_right )
-                    m_clipped << QPointF( m_right, ya )
-                              << QPointF( xa, m_top );
-                else
-                    m_clipped << QPointF( xa, m_top )
-                              << QPointF( m_right, ya );
-            }
+                m_clippedObject << QPointF( m_right, m_top );
+            else if ( m_lastBorderPoint.x() == m_right )
+                m_clippedObject << QPointF( m_right, ya )
+                                << QPointF( xa, m_top );
+            else
+                m_clippedObject << QPointF( xa, m_top )
+                                << QPointF( m_right, ya );
         }
-        if ( m_lastpos == 7 ) {
+        else if ( m_lastSector == 7 ) {
             xa = m_lastPoint.x() + ( m_bottom - m_lastPoint.y() ) / m;
             ya = m * ( m_right - m_lastPoint.x() ) + m_lastPoint.y();
             if ( xa > m_right && ya > m_bottom )
-                m_clipped << QPointF( m_right, m_bottom );
-            else {
-                if ( m_lastBorderPoint.x() == m_right )
-                    m_clipped << QPointF( m_right, ya )
-                              << QPointF( xa, m_bottom );
-                else
-                    m_clipped << QPointF( xa, m_bottom )
-                              << QPointF( m_right, ya );
-            }
+                m_clippedObject << QPointF( m_right, m_bottom );
+            else if ( m_lastBorderPoint.x() == m_right )
+                m_clippedObject << QPointF( m_right, ya )
+                                << QPointF( xa, m_bottom );
+            else
+                m_clippedObject << QPointF( xa, m_bottom )
+                                << QPointF( m_right, ya );
         }
         break;
+
     case 6:
-        m_clipped << QPointF( m_left, m_bottom );
+        m_clippedObject << QPointF( m_left, m_bottom );
         break;
+
     case 7:
-        if ( m_lastpos == 3 ) {
+        if ( m_lastSector == 3 ) {
             xa = m_lastPoint.x() + ( m_bottom - m_lastPoint.y() ) / m;
             ya = m * ( m_left - m_lastPoint.x() ) + m_lastPoint.y();
             if ( xa < m_left && ya > m_bottom )
-                m_clipped << QPointF( m_left, m_bottom );
-            else {
-                if ( m_lastBorderPoint.x() == m_left )
-                    m_clipped << QPointF( m_left, ya ) 
-                              << QPointF( xa, m_bottom );
-                else
-                    m_clipped << QPointF( xa, m_bottom )
-                              << QPointF( m_left, ya );
-            }
+                m_clippedObject << QPointF( m_left, m_bottom );
+            else if ( m_lastBorderPoint.x() == m_left )
+                m_clippedObject << QPointF( m_left, ya ) 
+                                << QPointF( xa, m_bottom );
+            else
+                m_clippedObject << QPointF( xa, m_bottom )
+                                << QPointF( m_left, ya );
         }
-        if ( m_lastpos == 5 ) {
+        else if ( m_lastSector == 5 ) {
             xa = m_lastPoint.x() + ( m_bottom - m_lastPoint.y() ) / m;
             ya = m * ( m_right - m_lastPoint.x() ) + m_lastPoint.y();
             if ( xa > m_right && ya > m_bottom )
-                m_clipped << QPointF( m_right, m_bottom );
-            else {
-                if ( m_lastBorderPoint.x() == m_right )
-                    m_clipped << QPointF( m_right, ya )
-                              << QPointF( xa, m_bottom );
-                else
-                    m_clipped << QPointF( xa, m_bottom )
-                              << QPointF( m_right, ya );
-            }
+                m_clippedObject << QPointF( m_right, m_bottom );
+            else if ( m_lastBorderPoint.x() == m_right )
+                m_clippedObject << QPointF( m_right, ya )
+                                << QPointF( xa, m_bottom );
+            else
+                m_clippedObject << QPointF( xa, m_bottom )
+                                << QPointF( m_right, ya );
         }
         break;
+
     case 8:
-        m_clipped << QPointF( m_right, m_bottom );
+        m_clippedObject << QPointF( m_right, m_bottom );
         break;
+
     default:
         break;				
     }
@@ -314,7 +316,7 @@ const QPointF ClipPainter::borderPoint()
     double m = ( m_currentPoint.y() - m_lastPoint.y() ) 
         / ( m_currentPoint.x() - m_lastPoint.x() );
 
-    int offscreenpos = (m_currentpos == 4) ? m_lastpos : m_currentpos;
+    int offscreenpos = ( m_currentSector == 4 ) ? m_lastSector : m_currentSector;
 
     // "Rise over run" for all possible situations .
     switch ( offscreenpos ) {
